<?xml version="1.0"?>
<package format="2">
  <name>my_dynamic_environment</name>
  <version>0.0.0</version>
  <description>The my_dynamic_environment package</description>

  <maintainer email="user@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
